# reflector-rs

./: Cargo.toml  PKGBUILD  README.md  deny.toml
.github/workflows/: ci.yml  release.yml
crates/arch-mirrors-rs/: Cargo.toml
crates/arch-mirrors-rs/src/: lib.rs  mirror.rs  protocol.rs  status.rs
crates/arch-reflector/: Cargo.toml
crates/arch-reflector/src/: cli.rs  lib.rs  main.rs  mirrors.rs
