[workspace]
members = [
    "crates/arch-reflector",
    "crates/arch-mirrors-rs",
]
resolver = "2"

[workspace.dependencies]
reqwest = { version = "0.11.13", features = ["json", "rustls-tls"], default-features = false }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
